Reduced font size of menu and added letter spacing for better readability... also corrected right side margin of social icons

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -6,9 +6,12 @@ header
         .navbar-nav
             @media (max-width: 940px)
                 font-size: 80%
+                margin-right: 0
 
             & > li > a
                 color: $mainfontcolor
+                font-size: 0.8em
+                letter-spacing: 2px
 
                 &:focus,
                 &:hover
